--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </header>
     <section class="trend">
         <div class="posts-header-container">
-            <h2 class="posts-header">Сейчас в тренде</h2>
+            <h2 class="shop-header">Сейчас в тренде</h2>
         </div>
         <div class="trend-container">
             <div class="trend-part part-1">
@@ -53,10 +53,10 @@
                         <div class="category">
                             <ul class="category-list">
                                 <li class="category-list-item">
-                                    <a href="#0" class="category-link">Travel</a>
+                                    <a href="#0" class="category-link">Lifestyle</a>
                                 </li>
                                 <li class="category-list-item">
-                                    <a href="#0" class="category-link">Health</a>
+                                    <a href="#0" class="category-link">Interior</a>
                                 </li>
                             </ul>
                         </div>
@@ -69,12 +69,63 @@
             </div>
             <div class="trend-part part-2">
                 <img src="images/trend2.jpg" class="trend-img" alt="Фотография человека у моря">
+                <div class="trend-content">
+                    <header class="trend-content-header">
+                        <div class="category">
+                            <ul class="category-list">
+                                <li class="category-list-item">
+                                    <a href="#0" class="category-link">Lifestyle</a>
+                                </li>
+                                <li class="category-list-item">
+                                    <a href="#0" class="category-link">Interior</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <h3 class="trend-title">
+                            <a href="#0" class="trend-title-link ">Сыры на красивых картинках из интернета: какие они на вкус?</a>
+                        </h3>
+                    </header>
+
+                </div>
             </div>
             <div class="trend-part part-3">
                 <img src="images/trend3.jpg" class="trend-img" alt="Фотография человека у моря">
+                <div class="trend-content">
+                    <header class="trend-content-header">
+                        <div class="category">
+                            <ul class="category-list">
+                                <li class="category-list-item">
+                                    <a href="#0" class="category-link">Food</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <h3 class="trend-title">
+                            <a href="#0" class="trend-title-link ">Собираемся в первый поход в горы</a>
+                        </h3>
+                    </header>
+
+                </div>
             </div>
             <div class="trend-part part-4">
                 <img src="images/trend4.jpg" class="trend-img" alt="Фотография человека у моря">
+                <div class="trend-content">
+                    <header class="trend-content-header">
+                        <div class="category">
+                            <ul class="category-list">
+                                <li class="category-list-item">
+                                    <a href="#0" class="category-link">Lifestyle</a>
+                                </li>
+                                <li class="category-list-item">
+                                    <a href="#0" class="category-link">Travel</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <h3 class="trend-title">
+                            <a href="#0" class="trend-title-link ">Сейчас в тренде: сколько витамина С в лимонах?</a>
+                        </h3>
+                    </header>
+
+                </div>
             </div>
         </div>
     </section>
@@ -87,10 +138,10 @@
                         <div class="category">
                             <ul class="category-list">
                                 <li class="category-list-item">
-                                    <a href="#0" class="category-link">Travel</a>
+                                    <a href="#0" class="category-link">Food</a>
                                 </li>
                                 <li class="category-list-item">
-                                    <a href="#0" class="category-link">Health</a>
+                                    <a href="#0" class="category-link">Travel</a>
                                 </li>
                             </ul>
                         </div>
@@ -374,7 +425,7 @@
         </aside>
         <section class="shop">
             <div class="posts-header-container">
-                <h2 class="posts-header">Наши изделия</h2>
+                <h2 class="shop-header">Наши изделия</h2>
             </div>
             <div class="shop-container">
                 <article class="shop-block">
@@ -385,13 +436,56 @@
                                 <a href="#0" class="shop-title-link ">Подушки на диван</a>
                             </h3>
                             <div class="shop-description">
-                                <p>Набор из двух подушек с модными принтами. Видео о создании <span class="text-link">здесь</span>.</p>
+                                <p>Набор из двух подушек с модными принтами. Видео о создании <span class="shop-link">
+                                    <a href="#0" class="text-link">здесь</a></span>.</p>
                             </div>
                         </div>
                         <footer class="shop-footer">
                             <div class="shop-prices">
-                                <span class="shop-price-old">1000 &#8381</span>
+                                <span class="shop-price old-price">1000 &#8381</span>
                                 <span class="shop-price">800 &#8381</span>
+                            </div>
+                            <button class="shop-button">В магазин</button>
+                        </footer>
+                    </div>
+                </article>
+                <article class="shop-block">
+                    <img src="images/shop-item-mobile2.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <div class="content-container">
+                        <div class="shop-content">
+                            <h3 class="shop-title">
+                                <a href="#0" class="shop-title-link ">Подушки на диван</a>
+                            </h3>
+                            <div class="shop-description">
+                                <p>Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <span class="shop-link">
+                                    <a href="#0" class="text-link">весенняя серия постов</a></span>в блоге и несколько подкастов.</p>
+                            </div>
+                        </div>
+                        <footer class="shop-footer">
+                            <div class="shop-prices">
+                                <span class="shop-price old-price"></span>
+                                <span class="shop-price">3 500 &#8381</span>
+                            </div>
+                            <button class="shop-button">В магазин</button>
+                        </footer>
+                    </div>
+                </article>
+                <article class="shop-block">
+                    <img src="images/shop-item-mobile3.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <div class="content-container">
+                        <div class="shop-content">
+                            <h3 class="shop-title">
+                                <a href="#0" class="shop-title-link ">Подушки на диван</a>
+                            </h3>
+                            <div class="shop-description">
+                                <p>Необычная рамка для украшения дома из видео <span class="shop-link">
+                                    <a href="#0" class="text-link">«Как сделать рамку из подручных средств за 30 минут»</a></span>.</p>
+                            </div>
+                        </div>
+                        <footer class="shop-footer">
+                            <div class="shop-prices">
+                                <span class="shop-price old-price">500 &#8381</span>
+                                <span class="shop-price">400 &#8381</span>
                             </div>
                             <button class="shop-button">В магазин</button>
                         </footer>
