--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             </div>
             <div class="shop-container">
                 <article class="shop-block">
-                    <img src="images/shop-item-mobile1.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография человека у моря">
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
@@ -450,7 +450,7 @@
                     </div>
                 </article>
                 <article class="shop-block">
-                    <img src="images/shop-item-mobile2.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <img src="images/shop-item-desk2.jpg" class="shop-img" alt="Фотография человека у моря">
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
@@ -471,7 +471,7 @@
                     </div>
                 </article>
                 <article class="shop-block">
-                    <img src="images/shop-item-mobile3.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <img src="images/shop-item-desk3.jpg" class="shop-img" alt="Фотография человека у моря">
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
