--- a/index.html
+++ b/index.html
@@ -429,7 +429,12 @@
             </div>
             <div class="shop-container">
                 <article class="shop-block">
-                    <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <picture class="shop-picture">
+                        <source media="min-width: 1200px" srcset="images/shop-item-desk1.jpg">
+                        <source media="min-width: 641px" srcset="images/shop-item-tablet1.jpg">
+                        <source media="max-width: 640px" srcset="images/shop-item-mobile1.jpg">
+                        <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография диванной подушки">
+                    </picture>
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
@@ -450,11 +455,14 @@
                     </div>
                 </article>
                 <article class="shop-block">
-                    <img src="images/shop-item-desk2.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <picture class="shop-picture">
+                        <source media="min-width: 1200px" srcset="images/shop-item-desk2.jpg">
+                        <img src="images/shop-item-desk2.jpg" class="shop-img" alt="Фотография с зайчиком, книгами и чайной чашкой">
+                    </picture>
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
-                                <a href="#0" class="shop-title-link ">Подушки на диван</a>
+                                <a href="#0" class="shop-title-link ">Кукла «Зайчик»</a>
                             </h3>
                             <div class="shop-description">
                                 <p>Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <span class="shop-link">
@@ -471,11 +479,11 @@
                     </div>
                 </article>
                 <article class="shop-block">
-                    <img src="images/shop-item-desk3.jpg" class="shop-img" alt="Фотография человека у моря">
+                    <img src="images/shop-item-desk3.jpg" class="shop-img" alt="Фотография с шестиугольной рамкой и вазочкой">
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
-                                <a href="#0" class="shop-title-link ">Подушки на диван</a>
+                                <a href="#0" class="shop-title-link ">Шестиугольная рамка</a>
                             </h3>
                             <div class="shop-description">
                                 <p>Необычная рамка для украшения дома из видео <span class="shop-link">
