--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <img src="svg/noemi-logo.svg" class="header-logo" width="178" alt="логотип-noemi">
             </a>
             <nav class="menu">
+                <button class="menu-button js-menu-button">
+                    <span class="menu-button-label">открыть меню</span>
+                  </button>
                 <ul class="menu-list">
                     <li class="menu-list-item">
                         <a href="#0" class="menu-link">Главная</a>
