--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                 <article class="shop-block">
                     <picture class="shop-picture">
                         <source media="min-width: 1200px" srcset="images/shop-item-desk1.jpg">
-                        <source media="min-width: 641px" srcset="images/shop-item-tablet1.jpg">
+                        <source media="min-width: 641px and max-width: 1199px" srcset="images/shop-item-tablet1.jpg">
                         <source media="max-width: 640px" srcset="images/shop-item-mobile1.jpg">
                         <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография диванной подушки">
                     </picture>
