--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <a href="#0" class="logo-link">
                 <img src="svg/noemi-logo.svg" class="header-logo" width="178" alt="логотип-noemi">
             </a>
-            <nav class="menu">
+            <nav class="menu-mobil">
                 <button class="menu-button js-menu-button">
-                    <span class="menu-button-label">открыть меню</span>
+                    <span class="menu-button-label"></span>
                   </button>
+            </nav>
+            <nav class="menu">
                 <ul class="menu-list">
                     <li class="menu-list-item">
                         <a href="#0" class="menu-link">Главная</a>
@@ -433,9 +435,9 @@
             <div class="shop-container">
                 <article class="shop-block">
                     <picture class="shop-picture">
-                        <source media="min-width: 1200px" srcset="images/shop-item-desk1.jpg">
-                        <source media="min-width: 641px and max-width: 1199px" srcset="images/shop-item-tablet1.jpg">
-                        <source media="max-width: 640px" srcset="images/shop-item-mobile1.jpg">
+                        <source media="(min-width: 1200px)" srcset="images/shop-item-desk1.jpg">
+                        <source media="(min-width: 641px and max-width: 1199px)" srcset="images/shop-item-tablet1.jpg">
+                        <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg">
                         <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография диванной подушки">
                     </picture>
                     <div class="content-container">
