--- a/index.html
+++ b/index.html
@@ -435,9 +435,9 @@
             <div class="shop-container">
                 <article class="shop-block">
                     <picture class="shop-picture">
-                        <source media="(min-width: 1200px)" srcset="images/shop-item-desk1.jpg">
-                        <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet1.jpg">
-                        <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg">
+                        <source media="(min-width: 1200px)" class="shop-img" srcset="images/shop-item-desk1.jpg">
+                        <source media="(min-width: 641px) and (max-width: 1199px)" class="shop-img" srcset="images/shop-item-tablet1.jpg">
+                        <source media="(max-width: 640px)" class="shop-img" srcset="images/shop-item-mobile1.jpg">
                         <img src="images/shop-item-desk1.jpg" class="shop-img" alt="Фотография диванной подушки">
                     </picture>
                     <div class="content-container">
@@ -461,7 +461,9 @@
                 </article>
                 <article class="shop-block">
                     <picture class="shop-picture">
-                        <source media="min-width: 1200px" srcset="images/shop-item-desk2.jpg">
+                        <source media="(min-width: 1200px)" class="shop-img" srcset="images/shop-item-desk2.jpg">
+                        <source media="(min-width: 641px) and (max-width: 1199px)" class="shop-img" srcset="images/shop-item-tablet2.jpg">
+                        <source media="(max-width: 640px)" class="shop-img" srcset="images/shop-item-mobile2.jpg">
                         <img src="images/shop-item-desk2.jpg" class="shop-img" alt="Фотография с зайчиком, книгами и чайной чашкой">
                     </picture>
                     <div class="content-container">
@@ -484,7 +486,12 @@
                     </div>
                 </article>
                 <article class="shop-block">
-                    <img src="images/shop-item-desk3.jpg" class="shop-img" alt="Фотография с шестиугольной рамкой и вазочкой">
+                    <picture class="shop-picture">
+                        <source media="(min-width: 1200px)" class="shop-img" srcset="images/shop-item-desk3.jpg">
+                        <source media="(min-width: 641px) and (max-width: 1199px)" class="shop-img" srcset="images/shop-item-tablet3.jpg">
+                        <source media="(max-width: 640px)" class="shop-img" srcset="images/shop-item-mobile3.jpg">
+                        <img src="images/shop-item-desk3.jpg" class="shop-img" alt="Фотография с шестиугольной рамкой">
+                    </picture>
                     <div class="content-container">
                         <div class="shop-content">
                             <h3 class="shop-title">
