--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
             <h1 class="title">Блог о творчестве, спорте и образе жизни</h1>
         </div>
     </header>
+    <div class="popup-wrapper">
+        <div class="popup-container">
+            <div class="popup">
+                <div class="popup-header-container">
+                    <h2 class="popup-header">Ваш фидбек</h2>
+                </div>
+                <form class="form">
+                    <div class="form-group">
+                        <label class="field-group">
+                        <span class="field-label">Как часто Вы заходите на сайт?</span>
+                        <select class="select">
+                            <option>Почти каждый день</option>
+                            <option selected>Каждый день</option>
+                            <option>Реже</option>
+                        </select>
+                    </label>
+                    </div>
+                    <div class="form-group">
+                        <span class="field-label">Вы подписаны на e-mail рассылку?</span>
+                        <label class="radio-group">
+                        <input type="radio" class="radio" name="radio-group">
+                        <span class="radio-group-text">Да</span>
+                    </label>
+                        <label class="radio-group">
+                        <input type="radio" class="radio" name="radio-group">
+                        <span class="radio-group-text">Нет</span>
+                    </label>
+                    </div>
+                    <div class="form-group">
+                        <label class="field-group">
+                  <span class="field-label">Напишите текст вашего сообщения</span>
+                  <textarea class="field textarea" placeholder="Может, больше рецептов?" required></textarea>
+                 </label>
+                    </div>
+                    <div class="form-group form-actions">
+                        <button type="submit" class="button button-submit">Отправить</button>
+                    </div>
+                </form>
+            </div>
+            <button class="popup__close" type="button">Закрыть окно</button>
+        </div>
+    </div>
     <section class="trend">
         <div class="posts-header-container">
             <h2 class="shop-header">Сейчас в тренде</h2>
