--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h2 class="popup-header">Ваш фидбек</h2>
                 </div>
                 <form class="form">
-                    <div class="form-group">
+                    <div class="form-group-popup">
                         <label class="field-group">
                         <span class="field-label">Как часто Вы заходите на сайт?</span>
                         <select class="select">
@@ -74,13 +74,13 @@
                         <span class="radio-group-text">Нет</span>
                     </label>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group-popup">
                         <label class="field-group">
                   <span class="field-label">Напишите текст вашего сообщения</span>
                   <textarea class="field textarea" placeholder="Может, больше рецептов?" required></textarea>
                  </label>
                     </div>
-                    <div class="form-group form-actions">
+                    <div class="form-group-popup form-actions">
                         <button type="submit" class="button button-submit">Отправить</button>
                     </div>
                 </form>
