--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h1 class="title">Блог о творчестве, спорте и образе жизни</h1>
         </div>
     </header>
+    <!--
     <div class="popup-wrapper">
         <div class="popup-container">
             <div class="popup">
@@ -63,7 +64,7 @@
                         </select>
                     </label>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group-popup">
                         <span class="field-label">Вы подписаны на e-mail рассылку?</span>
                         <label class="radio-group">
                         <input type="radio" class="radio" name="radio-group">
@@ -88,6 +89,7 @@
             <button class="popup__close" type="button">Закрыть окно</button>
         </div>
     </div>
+    -->
     <section class="trend">
         <div class="posts-header-container">
             <h2 class="shop-header">Сейчас в тренде</h2>
