--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="popup-header-container">
                     <h2 class="popup-header">Ваш фидбек</h2>
                 </div>
-                <form class="form">
+                <form class="form-popup">
                     <div class="form-group-popup">
                         <label class="field-group">
                         <span class="field-label">Как часто Вы заходите на сайт?</span>
